namespace Anansi.Application.Interfaces;

public interface IEmailService
{
    Task SendAsync(string to, string subject, string htmlBody, CancellationToken ct = default);
    Task SendTemplatedAsync(string to, string templateId, Dictionary<string, string> variables, CancellationToken ct = default);
}
